charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-dogs-api
  namespace: bits
  labels:
    app: cats-dogs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cats-dogs-api
  template:
    metadata:
      labels:
        app: cats-dogs-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: cats-dogs-api
        image: jaideeppalit/bits_mtech_mlops_2:db3cd266ebee4d9c5581d1bea940a5e8540807ac
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 60
