charts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-dogs-service
  namespace: bits
spec:
  type: LoadBalancer
  selector:
    app: cats-dogs-api
  ports:
    - port: 80
      targetPort: 8000
